# Birdy

./: .gitignore  app.py  pyproject.toml
src/: config.py  graph.py  state.py
src/nodes/: compose.py  identification.py  retrieval.py
src/tools/: audio_client.py  inaturalist.py  vision_model.py  wiki_search.py  xenocanto.py
